# robot-visual-memory

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: latency_profile.py  performance_test.py
config/: benchmark.yaml  default.yaml  production.yaml
docs/: architecture.md  benchmarks.md  design_decisions.md
ros2/: visual_memory_node.py
ros2/launch/: visual_memory_launch.py
scripts/: compress_memories.py  ingest_video.py  query_cli.py  reset_collection.py
src/: __init__.py  main.py
src/memory/: compressor.py  qdrant_client.py  schemas.py  visual_memory.py
src/navigation/: controller.py
src/perception/: encoder.py  keyframe_selector.py
src/retrieval/: change_detector.py  retriever.py
src/utils/: batching.py  pose.py  timing.py
tests/: test_encoder.py  test_memory.py  test_navigation.py  test_retrieval.py
